21 Aug 2018
fix: initial cookie_lifetime value, during install
remove: bottom margin staff picks block
add: missing free_details.php

20 Aug 2018
update: reset remember me cookie expires time when remember token is updated in db
add: cache entry to destroy user session when changing password, disabled, etc
update: destroy all users auth_tokens when logging out
update: delete all expired auth_tokens when generating new token
fix: multiple logins destroying other login remember me tokens
update: insert/update in 1 query instead of delete/insert set_remember

19 Aug 2018
fix: undefined index get_date()
update: add required fields to signup.php, invite_signup.php, requests.php, offers.php
fix: null referer when url not wrapped in url tags AJAX Chat
update: jquery.validate.js
remove: mods folder, not used
update: use php date() instead of mysql NOW() for search
update: use random_bytes() instead of make_password() to generate auth tokens
add: change remember me tokens once used
add: additional user whereis locations
update: explicitly start session when using remember me token
update: remember me fuction to update expires time while user is active on site
add: flushDB() to flush only the site specific db when using redis as cache driver
update: imdbphp class

18 Aug 2018
update: tooltip formatting movies.php
update: imdb_info_short to find images on fanart or omdb, when imdb image not found
add: create_image() to create dummy src images for lazy loading
update: additional images lazy loaded
fix: typo lang_pm.php
fix: check incorrect var view_message.php
fix: typo ajax_chat_cleanup.php
add: missing pirate.png
fix: AJAX Chat disabled gif
fix: incorrect lang key for AJAX Chat messages
update: show users message when banned from AJAX Chat
update: remove img tags from AJAX Chat messages after 24 hours
update: hide anonymous users from showing in AJAX Chat Online list
fix: last post link forums.php
update: database files
fix: comments edit/delete