@@ -4,20 +4,23 @@ require_once INCL_DIR . 'user_functions.php';
 require_once CLASS_DIR . 'class_check.php';
 $class = get_access(basename($_SERVER['REQUEST_URI']));
 class_check($class);
-global $CURUSER, $site_config, $lang;
+global $CURUSER, $site_config, $lang, $fluent;
 
 $lang = array_merge($lang, load_language('ad_freelech'));
 $HTMLOUT = '';
+$free = json_decode(file_get_contents(CACHE_DIR . 'free_cache.php'), true);
 if (isset($_GET['remove'])) {
-    $configfile = '<' . $lang['freelech_thisfile'] . date('M d Y H:i:s');
-    $configfile .= $lang['freelech_config_file'];
-    $configfile .= "\n);";
-    file_put_contents(CACHE_DIR . 'free_cache.php', $configfile);
+    if (!empty($free[$_GET['remove']])) {
+        unset($free[$_GET['remove']]);
+    }
+    $free = array_values($free);
+    file_put_contents(CACHE_DIR . 'free_cache.php', json_encode($free) . PHP_EOL);
+    clearstatcache();
+    sleep(3);
     header("Location: {$site_config['baseurl']}/staffpanel.php?tool=freeleech");
     die();
 }
 if ($_SERVER['REQUEST_METHOD'] === 'POST') {
-    $configfile = '<' . $lang['freelech_thisfile'] . date('M d Y H:i:s');
     $fl['modifier'] = (isset($_POST['modifier']) ? (int) $_POST['modifier'] : false);
     if (isset($_POST['expires']) && $_POST['expires'] == 255) {
         $fl['expires'] = 1;
@@ -27,23 +30,31 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
     $fl['setby'] = (isset($_POST['setby']) ? htmlsafechars($_POST['setby']) : false);
     $fl['title'] = (isset($_POST['title']) ? htmlsafechars($_POST['title']) : false);
     $fl['message'] = (isset($_POST['message']) ? htmlsafechars($_POST['message']) : false);
-    //echo_r($fl);
     if ($fl['modifier'] === false || $fl['expires'] === false || $fl['setby'] === false || $fl['title'] === false || $fl['message'] === false) {
         echo '' . $lang['freelech_error_form'] . '';
         die();
     }
-    $configfile .= "array('modifier'=> {$fl['modifier']}, 'expires'=> {$fl['expires']}, 'setby'=> '{$fl['setby']}', 'title'=> '{$fl['title']}', 'message'=> '{$fl['message']}')";
-    $configfile .= "\n);";
-    file_put_contents(CACHE_DIR . 'free_cache.php', $configfile);
+    if (!empty($free[0]) && $free[0]['modifier'] === 0) {
+        unset($free[0]);
+    }
+    $free[] = [
+        'modifier'=> $fl['modifier'],
+        'expires'=> $fl['expires'],
+        'setby'=> $fl['setby'],
+        'title'=> $fl['title'],
+        'message'=> $fl['message'],
+    ];
+    file_put_contents(CACHE_DIR . 'free_cache.php', json_encode($free) . PHP_EOL);
+    clearstatcache();
+    sleep(3);
     header("Location: {$site_config['baseurl']}/staffpanel.php?tool=freeleech");
     die();
 }
-require_once CACHE_DIR . 'free_cache.php';
+$HTMLOUT .= '<h1 class="has-text-centered">' . $lang['freelech_current'] . '</h1>';
 if (isset($free) && (count($free) < 1)) {
-    $HTMLOUT .= '<h1>' . $lang['freelech_current'] . '</h1>
-                 <p><b>' . $lang['freelech_nofound'] . '</b></p>';
+    $HTMLOUT .= main_div($lang['freelech_nofound'], 'has-text-centered bottom20');
 } else {
-    $HTMLOUT .= "<br><table >
+    $HTMLOUT .= "<table class='table table-bordered table-striped'>
         <tr><td class='colhead'>{$lang['freelech_free_all']}</td>
         <td class='colhead'>{$lang['freelech_expires']}</td>
         <td class='colhead'>{$lang['freelech_setby']}</td>
@@ -51,6 +62,7 @@ if (isset($free) && (count($free) < 1)) {
         <td class='colhead'>{$lang['freelech_message']}</td>
         <td class='colhead'>{$lang['freelech_remove']}</td></tr>";
     $checked1 = $checked2 = $checked3 = $checked4 = '';
+    $i = 0;
     foreach ($free as $fl) {
         switch ($fl['modifier']) {
             case 1:
@@ -81,15 +93,17 @@ if (isset($free) && (count($free) < 1)) {
              <td>{$fl['setby']}</td>
              <td>{$fl['title']}</td>
              <td>{$fl['message']}</td>
-             <td><a href='staffpanel.php?tool=freeleech&amp;action=freeleech&amp;remove'>{$lang['freelech_remove']}</a>
+             <td><a href='staffpanel.php?tool=freeleech&amp;action=freeleech&amp;remove={$i}' class='button is-small'>{$lang['freelech_remove']}</a>
              </td></tr>";
+        $i++;
     }
     $HTMLOUT .= '</table>';
 }
 $checked = 'checked=\'checked\'';
-$HTMLOUT .= "<h2>{$lang['freelech_set_free']}</h2>
+
+$HTMLOUT .= "<h2 class='has-text-centered'>{$lang['freelech_set_free']}</h2>
     <form method='post' action='staffpanel.php?tool=freeleech&amp;action=freeleech'>
-    <table >
+    <table class='table table-bordered table-striped'>
     <tr><td class='rowhead'>{$lang['freelech_mode']}</td>
     <td> <table width='100%'>
  <tr>
@@ -118,20 +132,19 @@ $HTMLOUT .= "<h2>{$lang['freelech_set_free']}</h2>
     <option value='255'>{$lang['freelech_unlimited']}</option>
     </select></td></tr>
     <tr><td class='rowhead'>{$lang['freelech_title']}</td>
-    <td><input type='text' size='40' name='title' value='{$fl['title']}' />
+    <td><input type='text' class= 'w-100'' name='title' placeholder='{$fl['title']}' />
     </td></tr>
         <tr><td class='rowhead'>{$lang['freelech_message']}</td>
-    <td><input type='text' size='40' name='message' value='{$fl['message']}' />
+    <td><input type='text' class='w-100' name='message' placeholder='{$fl['message']}' />
     </td></tr>
             <tr><td class='rowhead'>{$lang['freelech_setby']}</td>
-    <td><input type='text' size='40' value ='" . $CURUSER['username'] . "' name='setby' />
+    <td><input type='text' class='w-100' value ='" . $CURUSER['username'] . "' name='setby' />
     </td></tr>
-    <tr><td colspan='2'>
+    <tr><td colspan='2' class='has-text-centered'>
     <input type='submit' name='okay' value='{$lang['freelech_doit']}' class='button is-small' />
-    </td></tr>
-    <tr><td colspan='2'>
-    <input type='hidden' name='cacheit' value='{$lang['freelech_cache']}' class='button is-small' />
+    <input type='hidden' name='cacheit' value='{$lang['freelech_cache']}' />
     </td></tr>
     </table></form>";
+
 echo stdhead($lang['freelech_stdhead']) . wrapper($HTMLOUT) . stdfoot();
 die();
