@@ -1,11 +1,1 @@
-<?php
-
-$free = [
-    [
-        'modifier' => 0,
-        'expires' => 'Inf.',
-        'setby' => 'No One',
-        'title' => 'Add title',
-        'message' => 'Add Message',
-    ],
-];
+[]
